# vulnforge-elite

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md
docs/guides/: bounty-reporting.md  getting-started.md  negotiation-tips.md
gui/: README.md  index.html  package-lock.json  package.json
gui/electron/: main.js
gui/src/: App.tsx  index.css
gui/src/components/: Dashboard.tsx  LoginScreen.tsx  Scans.tsx  Settings.tsx  Targets.tsx  Terminal.tsx
gui/src/contexts/: AppContext.tsx
src/vulnforge/: __init__.py
website/: index.html  script.js  styles.css
