[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnforge-elite"
version = "1.0.0"
description = "The Apex VAPT/Bug Bounty Domination Platform"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "VulnForge Elite Team" }]
keywords = ["security", "pentesting", "bug-bounty", "vapt", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    # Core
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx[http2]>=0.27.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # Async
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "anyio>=4.3.0",
    
    # Web/API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    
    # AI/ML
    "ollama>=0.2.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    
    # Data
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    
    # Security Tools
    "dnspython>=2.6.0",
    "python-nmap>=0.7.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "cryptography>=42.0.0",
    
    # Reporting
    "jinja2>=3.1.0",
    "markdown>=3.6",
    "weasyprint>=62.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "tqdm>=4.66.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.100.0",
    "behave>=1.2.6",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
full = [
    "playwright>=1.44.0",
    "selenium>=4.21.0",
    "clickhouse-connect>=0.7.0",
    "pymilvus>=2.4.0",
]

[project.scripts]
vulnforge = "vulnforge.cli.main:app"
vf = "vulnforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/vulnforge/vulnforge-elite"
Documentation = "https://vulnforge-elite.readthedocs.io"
Repository = "https://github.com/vulnforge/vulnforge-elite"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
